# transformer-rust

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  todo.txt
docs/conversations/: 2026-06-15-claude-md-conversation-summaries.md  2026-06-16-bpe-tokenizer-swap.md  2026-06-16-training-setup-tuning.md
src/: attention.rs  config.rs  data_loader.rs  gpt_model.rs  main.rs  tokenizer.rs  transformer_block.rs
