[package]
name = "transformer-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
tokenizers = "0.23.1"
candle-core = { git = "https://github.com/huggingface/candle.git", features = [
    "metal",
] }
candle-nn = { git = "https://github.com/huggingface/candle.git", features = [
    "metal",
] }
candle-transformers = { git = "https://github.com/huggingface/candle.git", features = [
    "metal",
] }
rand = "0.10.1"
tiktoken = "3.1.4"
